hydro_test/src/cluster/snapshots/hydro_test__cluster__compute_pi__tests__decoupled_compute_pi_ir@surface_graph_0.snap
---
source: hydro_test/src/cluster/compute_pi.rs
expression: ir.surface_syntax_string()
---
1v1 = spin ();
2v1 = flat_map (stageleft :: runtime_support :: fn1_type_hint :: < () , std :: ops :: Range < usize > > ({ use hydro_lang :: __staged :: __deps :: * ; use hydro_lang :: __staged :: location :: tick :: * ; let batch_size__free = { use crate :: __staged :: __deps :: * ; use crate :: __staged :: cluster :: compute_pi :: * ; let batch_size__free = 8192usize ; batch_size__free } ; move | _ | 0 .. batch_size__free }));
3v1 = map (stageleft :: runtime_support :: fn1_type_hint :: < usize , () > ({ use hydro_lang :: __staged :: __deps :: * ; use hydro_lang :: __staged :: location :: tick :: * ; | _ | () }));
4v1 = map (stageleft :: runtime_support :: fn1_type_hint :: < () , (f64 , f64) > ({ use crate :: __staged :: __deps :: * ; use crate :: __staged :: cluster :: compute_pi :: * ; | _ | rand :: random :: < (f64 , f64) > () }));
5v1 = map (stageleft :: runtime_support :: fn1_type_hint :: < (f64 , f64) , bool > ({ use crate :: __staged :: __deps :: * ; use crate :: __staged :: cluster :: compute_pi :: * ; | (x , y) | x * x + y * y < 1.0 }));
6v1 = map (| b | (MemberId :: < () > :: from_raw (__hydro_lang_cluster_self_id_0) , b));
7v1 = map (:: hydro_lang :: runtime_support :: stageleft :: runtime_support :: fn1_type_hint :: < (hydro_lang :: location :: MemberId < _ > , bool) , _ > (| (id , data) | { (id . raw_id , hydro_lang :: runtime_support :: bincode :: serialize (& data) . unwrap () . into ()) }));
8v1 = dest_sink (DUMMY_SINK);

1v1 -> 2v1;
2v1 -> 3v1;
3v1 -> 4v1;
4v1 -> 5v1;
5v1 -> 6v1;
7v1 -> 8v1;
6v1 -> 7v1;
